2002-02-21  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (_keyRE): I forgot to compile this regex,
	causing an error on swmgr restart.

	* SkunkWeb/Services/product/loader.py: removed unnecessary
	import. 

	* pylibs/vfs/importer.py (uninstall): fixed typo; no longer
	delete __oldimport__ (leaving it around doesn't hurt).

	* pylibs/vfs/zipfs.py (ZipFS.isdir), pylibs/vfs/tarfs.py
	(TarFS.isdir): 	no longer raise an exception when calling isdir on
	a nonexistent file. 

	* SkunkWeb/Services/product/loader.py (Product.__reallyload): use
	the new vfs.importer; no longer mount the libfs on the multifs,
	since it is easier to import directly from the archive file, and
	the sys.path entry refers to the archive file fs by registered key.

	* pylibs/vfs/vfs.py (VFSRegistry, registerFS): added vfs registry,
	to support vfs urls, used by vfs.importer and product service.

	* pylibs/vfs/importer.py: totally rewritten to use Gordon
	McMillan's iu module (with his generous permission).

2002-02-20  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/ServiceRegistry.py (registerService): cosmetic
	improvements.

	* pylibs/MySQL/__init__.py (initUser): now tolerate
	calls to initUser on users who have already been initialized (the
	call then has no effect).  This fixes a problem pointed out by
	Spruce Weber with restarting the server.

	* SkunkWeb/Services/product/__init__.py: autocreate
	product directory.

	* SkunkWeb/Services/product/loader.py (Product.__reallyload):
	stopped using a vfs importer for directory products.
	(Product.load): improved dependency check -- optionally
	can include version in dependency. (Product): moved static
	methods to module methods.

	* configure.in, configure, SkunkWeb/configure.in,
	SkunkWeb/configure: added reference to product service.

2002-02-19  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/: adding first cut at a
	product service.  loader.py has a Product class, and loads